wip: sticky header - fixes off screen issue

--- a/Source/Blazorise/Styles/_layout.scss
+++ b/Source/Blazorise/Styles/_layout.scss
@@ -1,4 +1,8 @@
-﻿.b-layout {
+﻿body {
+    overflow-x: hidden;
+}
+
+.b-layout {
     display: flex;
     flex: auto;
     flex-direction: column;
@@ -13,11 +17,6 @@
 .b-layout {
     &.b-layout-has-sider {
         flex-direction: row;
-
-        > .b-layout,
-        > .b-layout-content {
-            overflow-x: hidden;
-        }
     }
 }
 
@@ -33,9 +32,9 @@
     /*background: #001529;*/
     line-height: 64px;
     &-fixed {
-        position: fixed;
+        position: sticky;
         z-index: 1;
-        width: 100%;
+        top: 0;
     }
 }
 
@@ -49,9 +48,6 @@
 .b-layout-content {
     flex: auto;
     min-height: 0;
-    &-header-fixed {
-        margin-top: 64px;
-    }
 }
 
 .b-layout-sider {
